[workspace]
members = ["macroquad-particles"]

[package]
name = "fuzzy"
version = "0.1.0"
edition = "2021"

[dependencies]
egui-macroquad = "0.15.0"
macroquad = "0.4.13"
macroquad-particles = { path = "./macroquad-particles" }

[profile.dev.package.'*']
opt-level = 3

[profile.release]
opt-level = 'z'   # Optimize for size
lto = false       # Disable LTO (consider enabling thin LTO if stable)
codegen-units = 1 # Reduce number of codegen units for better optimization
panic = 'abort'   # Abort on panic to reduce binary size
strip = true      # Strip debug symbols
debug = 0         # Disable debug info for smaller binary size
